# Opengl-fft-Ocean

./: CMakeLists.txt  README.md
shaders/: cube_capture.vs  equirect_to_cubemap.fs  fft_init.glsl  fft_process.glsl  fullscreen_quad.vs  skybox.fs  skybox.vs  vertex.glsl  water_mesh.fs  water_mesh.vs
src/: main.cpp
